add main content section with styling and utility classes

--- a/src/index.html
+++ b/src/index.html
@@ -60,5 +60,47 @@
         </ul>
       </nav>
     </header>
+
+    <main class="container">
+      <div
+        class="text-white relative pt-64 px-8 pb-8 rounded-2xl overflow-hidden bg-gradient-to-t from-verde-950/80"
+      >
+        <img
+          class="absolute inset-0 -z-10 size-full object-cover"
+          src="./img/floresta.jpg"
+        />
+        <div
+          class="bg-verde-950 inline-flex items-center py-1 pl-4 pr-1 rounded-full mb-8"
+        >
+          vagas para dezembro abertas
+          <a
+            class="bg-verde-400 text-verde-900 py-2 px-4 inline-block rounded-full *:"
+            href=""
+            >Reverse hoje</a
+          >
+        </div>
+        <h1 class="font-serif text-4xl max-w-screen-sm text-balance mb-20">
+          Venha Experimentar a Vida na Floresta
+        </h1>
+        <div class="text-sm flex justify-between items-end">
+          <p>
+            Melhores locais para visitar
+            <a
+              class="underline decoration-2 underline-offset-4 hover:no-underline"
+              href="./"
+              >2049*</a
+            >
+          </p>
+          <div>
+            <p class="uppercase">Recomentado por</p>
+            <p class="flex items-center gap-4">
+              <img class="w-28" src="./img/parceiros/wildbeast.svg" />
+              <span>|</span>
+              Revista Nacional
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
