--- a/src/index.html
+++ b/src/index.html
@@ -63,14 +63,14 @@
 
     <main class="container">
       <div
-        class="text-white relative pt-64 px-8 pb-8 rounded-2xl overflow-hidden bg-gradient-to-t from-verde-950/80"
+        class="text-white relative pt-64 px-8 pb-8 rounded-2xl overflow-hidden bg-gradient-to-t from-verde-950/80 max-sm:pt-12 max-sm:px-4"
       >
         <img
           class="absolute inset-0 -z-10 size-full object-cover"
           src="./img/floresta.jpg"
         />
         <div
-          class="bg-verde-950 inline-flex items-center py-1 pl-4 pr-1 rounded-full mb-8"
+          class="bg-verde-950/60 sm:bg-verde-950 items-start sm:inline-flex sm:items-center sm:py-1 sm:pl-4 sm:pr-1 sm:rounded-full rounded-xl flex flex-col sm:flex-row gap-2 p-4 mb-8"
         >
           vagas para dezembro abertas
           <a
@@ -79,11 +79,13 @@
             >Reverse hoje</a
           >
         </div>
-        <h1 class="font-serif text-4xl max-w-screen-sm text-balance mb-20">
+        <h1
+          class="font-serif text-4xl sm:text-5xl max-w-screen-sm text-balance mb-8 sm:mb-20"
+        >
           Venha Experimentar a Vida na Floresta
         </h1>
-        <div class="text-sm flex justify-between items-end">
-          <p>
+        <div class="text-sm sm:flex justify-between items-end">
+          <p class="max-sm:mb-4">
             Melhores locais para visitar
             <a
               class="underline decoration-2 underline-offset-4 hover:no-underline"
