--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     />
     <link href="./output.css" rel="stylesheet" />
   </head>
+
   <body class="bg-verde-800 font-sans">
     <div class="container mt-4 flex justify-center md:justify-start">
       <div class="inline-flex items-center rounded-md bg-verde-900">
@@ -104,5 +105,75 @@
         </div>
       </div>
     </main>
+
+    <!-- Acomodacao -->
+    <section
+      id="acomodacao"
+      class="container mb-12 sm:mb-16 pt-16 grid lg:grid-cols-[2fr_3fr] gap-8"
+    >
+      <div
+        class="bg-[url('./img/padrao.svg')] bg-no-repeat bg-contain content-end"
+      >
+        <h2 class="text-white mb-8 text-4xl font-serif lg:text-5xl">
+          Refugio Natural
+        </h2>
+        <ul
+          class="text-gray-200 *:flex *:items-center *:gap-4 grid gap-4 sm:text-xl"
+        >
+          <li class="">
+            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>Experimente
+            a natureza de perto
+          </li>
+          <li>
+            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>Conecte-se
+            com a natureza
+          </li>
+          <li>
+            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span
+            >Desconecte-se do digital
+          </li>
+          <li>
+            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>Observe a
+            vida selvagem
+          </li>
+          <li>
+            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>Escolha a
+            sua cabine preferida
+          </li>
+        </ul>
+      </div>
+      <div class="grid grid-cols-[2fr_1fr] gap-4 sm:gap-8">
+        <div class="col-span-full grid *:col-start-1 *:row-start-1">
+          <img
+            class="h-52 w-full object-cover rounded-xl"
+            src="./img/casa1.jpg"
+          />
+          <span
+            class="uppercase text-white rounded-full bg-verde-950/60 px-4 py-2 text-sm/none self-start justify-self-end m-2"
+            >Ruby</span
+          >
+        </div>
+        <div class="grid *:col-start-1 *:row-start-1">
+          <img
+            class="size-full object-cover rounded-xl"
+            src="./img/casa2.jpg"
+          />
+          <span
+            class="uppercase text-white rounded-full bg-verde-950/60 px-4 py-2 text-sm/none self-start justify-self-end m-2"
+            >Emeraldy</span
+          >
+        </div>
+        <div class="grid *:col-start-1 *:row-start-1">
+          <img
+            class="size-full object-cover rounded-xl"
+            src="./img/casa3.jpg"
+          />
+          <span
+            class="uppercase text-white rounded-full bg-verde-950/60 px-4 py-2 text-sm/none self-start justify-self-end m-2"
+            >Saphire</span
+          >
+        </div>
+      </div>
+    </section>
   </body>
 </html>
