--- a/src/index.html
+++ b/src/index.html
@@ -258,5 +258,86 @@
         </div>
       </div>
     </section>
+
+    <!-- experiencias -->
+    <section
+      id="experiencias"
+      class="container mb-12 sm:mb-16 grid sm:grid-cols-2 gap-8"
+    >
+      <div class="bg-verde-900 p-6 sm:p-8 rounded-xl">
+        <p class="mb-4 text-verde-200 uppercase tracking-widest text-sm">
+          Experiencias Exclusivas
+        </p>
+        <h2
+          class="mb-8 mx-auto font-serif text-balance text-white text-3xl sm:text-4xl capitalize"
+        >
+          Escolha a sua próxima aventura
+        </h2>
+        <h3
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-[width]"
+        >
+          Observação noturna
+        </h3>
+        <p class="mb-8 text-balance text-gray-400 pl-10">
+          Observe a vida selvagem em seu habitat natural sob as estrelas.
+        </p>
+        <h3
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-[width]"
+        >
+          Vida Selvagem
+        </h3>
+        <p class="mb-8 text-balance text-gray-400 pl-10">
+          Observe a vida selvagem em seu habitat natural.
+        </p>
+        <h3
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-[width]"
+        >
+          Canoagem
+        </h3>
+        <p class="mb-8 text-balance text-gray-400 pl-10">
+          Conquiste novos horizontes com nossa equipe especializada.
+        </p>
+      </div>
+
+      <div class="grid grid-cols-2 gap-4">
+        <div class="group relative overflow-hidden rounded-xl cursor-pointer">
+          <img
+            class="size-full object-cover transition-transform group-hover:scale-110"
+            src="./img/canoagem.jpg"
+          />
+          <div
+            class="absolute flex items-end p-4 inset-0 bg-gradient-to-t from-verde-950/80 transition-opacity opacity-0 group-hover:opacity-100"
+          >
+            <span class="text-white font-serif">Canoagem</span>
+          </div>
+        </div>
+
+        <div
+          class="group row-span-2 relative overflow-hidden rounded-xl cursor-pointer"
+        >
+          <img
+            class="size-full object-cover transition-transform group-hover:scale-110"
+            src="./img/observacao-noturna.jpg"
+          />
+          <div
+            class="group absolute flex items-end p-4 inset-0 bg-gradient-to-t from-verde-950/80 transition-opacity opacity-0 group-hover:opacity-100"
+          >
+            <span class="text-white font-serif">observacao noturna</span>
+          </div>
+        </div>
+
+        <div class="group relative overflow-hidden rounded-xl cursor-pointer">
+          <img
+            class="size-full object-cover transition-transform group-hover:scale-110"
+            src="./img/vida-selvagem.jpg"
+          />
+          <div
+            class="absolute flex items-end p-4 inset-0 bg-gradient-to-t from-verde-950/80 transition-opacity opacity-0 group-hover:opacity-100"
+          >
+            <span class="text-white font-serif">Vida selvagem</span>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
