--- a/src/index.html
+++ b/src/index.html
@@ -339,5 +339,74 @@
         </div>
       </div>
     </section>
+
+    <!-- Experiencias exclusivas -->
+    <section
+      class="container bg-[url('./img/padrao.svg')] bg-contain bg-center bg-no-repeat mb-12 sm:mb-16 sm:py-16"
+    >
+      <p
+        class="mb-4 text-center text-verde-200 uppercase tracking-widest text-sm"
+      >
+        Ciclo natural
+      </p>
+
+      <h2
+        class="mb-8 text-white text-center max-w-screen-md text-4xl sm:text-6xl mx-auto text-balance font-serif"
+      >
+        Ritmo da Floresta
+      </h2>
+
+      <div class="flex flex-col sm:flex-row sm:gap-8 gap-4">
+        <div
+          class="grid flex-1 gap-4 bg-verde-900 p-6 sm:p-8 rounded-xl sm:hover:-translate-y-2 transition-transform"
+        >
+          <div class="">
+            <img
+              class="bg-verde-400 size-10 flex items-center justify-center rounded-full"
+              src="./img/manha.svg"
+            />
+          </div>
+          <h3 class="font-serif text-2xl text-white">Amanhecer</h3>
+          <p class="text-gray-400">
+            Desperte com o canto dos pássaros e participe das nossas caminhadas
+            ao ar livre
+          </p>
+          <span class="text-verde-300">05:00 - 07:00</span>
+        </div>
+
+        <div
+          class="grid flex-1 gap-4 bg-verde-900 p-6 sm:p-8 rounded-xl transition-transform sm:hover:translate-y-10 sm:translate-y-12"
+        >
+          <div class="">
+            <img
+              class="bg-verde-400 size-10 flex items-center justify-center rounded-full"
+              src="./img/dia.svg"
+            />
+          </div>
+          <h3 class="font-serif text-2xl text-white">Meio Dia</h3>
+          <p class="text-gray-400">
+            Explore nossas trilhas sombreadas e desfrute de um pequenique
+            gourmet na natureza
+          </p>
+          <span class="text-verde-300">12:00 - 14:00</span>
+        </div>
+
+        <div
+          class="grid flex-1 gap-4 bg-verde-900 p-6 sm:p-8 rounded-xl sm:hover:-translate-y-2 transition-transform"
+        >
+          <div class="">
+            <img
+              class="bg-verde-400 size-10 flex items-center justify-center rounded-full"
+              src="./img/noite.svg"
+            />
+          </div>
+          <h3 class="font-serif text-2xl text-white">Anoitecer</h3>
+          <p class="text-gray-400">
+            Termine o dia com nossa sessão de observação de estrelas
+          </p>
+          <span class="text-verde-300">19:00 - 21:00</span>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
