--- a/src/index.html
+++ b/src/index.html
@@ -408,5 +408,91 @@
         </div>
       </div>
     </section>
+
+    <!-- Contato -->
+    <section id="#contato" class="container mb-12 sm:mb-16 grid lg:grid-cols-2">
+      <div class="">
+        <h1 class="font-serif text-4xl text-verde-400 mb-4">Contato</h1>
+        <p class="text-gray-200 text-balance mb-8">
+          Tem interesse em passar uma temporada na Florest? Entre em contato com
+          a gente por telefone ou email.
+        </p>
+        <div class="grid gap-4">
+          <div class="">
+            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+            <h2 class="mb-2 text-2xl text-verde-300 font-serif">Base</h2>
+            <p class="text-gray-300">
+              Rua da Mata, 123 - Floresta Nacional - RJ
+            </p>
+          </div>
+
+          <div class="">
+            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+            <h2 class="mb-2 text-2xl text-verde-300 font-serif">Fone</h2>
+            <p class="text-gray-300">21 9 9999-9999</p>
+          </div>
+
+          <div class="">
+            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+            <h2 class="mb-2 text-2xl text-verde-300 font-serif">Email</h2>
+            <p class="text-gray-300">contato@floresnt.com</p>
+          </div>
+        </div>
+
+        <form
+          action=""
+          class="grid gap-4 rounded-xl bg-verde-900 shadow-2xl p-4 lg:p-8 mt-8"
+        >
+          <div class="grid gap-4 sm:grid-cols-1">
+            <div class="grid gap-1">
+              <label for="nome" class="text-white">Nome</label>
+              <input
+                type="text"
+                class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:outline-none focus:ring-2 focus:ring-verde-400 focus:border-verde-900 placeholder:text-verde-700"
+                placeholder="Nome completo"
+              />
+            </div>
+          </div>
+
+          <div class="grid gap-4 sm:grid-cols-2">
+            <div class="grid gap-1">
+              <label for="email" class="text-white">Email</label>
+              <input
+                type="email"
+                class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:outline-none focus:ring-2 focus:ring-verde-400 focus:border-verde-900 placeholder:text-verde-700"
+                placeholder="email@email.com"
+              />
+            </div>
+
+            <div class="grid gap-1">
+              <label for="nome" class="text-white">Telefone</label>
+              <input
+                type="number"
+                class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:outline-none focus:ring-2 focus:ring-verde-400 focus:border-verde-900 placeholder:text-verde-700"
+                placeholder="(99) 9 9999-9999"
+              />
+            </div>
+          </div>
+
+          <div class="grid gap-1 sm:grid-cols-1">
+            <div class="grid gap-1">
+              <label for="mensagem" class="text-white">Mensagem</label>
+              <textarea
+                type="text"
+                rows="5"
+                class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:outline-none focus:ring-2 focus:ring-verde-400 focus:border-verde-900 placeholder:text-verde-700 resize-none"
+                placeholder="Mensagem"
+              ></textarea>
+            </div>
+          </div>
+
+          <button
+            class="bg-verde-400 text-verde-900 py-2 px-8 inline-block rounded-full place-self-start"
+          >
+            Enviar
+          </button>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
