add parceiros section with layout and styling enhancements

--- a/src/index.html
+++ b/src/index.html
@@ -494,5 +494,18 @@
         </form>
       </div>
     </section>
+
+    <!-- Parceiros -->
+    <section class="container mb-12 sm:mb-16">
+      <ul
+        class="*:*:max-h-8 flex flex-col items-center py-4 max-sm:divide-y-4 divide-verde-900 *:p-4 sm:flex-row sm:gap-8 border-b-2 sm:border-t-2 sm:border-verde-900 sm:py-8"
+      >
+        <li><img src="./img/parceiros/caravan.svg" /></li>
+        <li><img src="./img/parceiros/dogs.svg" /></li>
+        <li><img src="./img/parceiros/wildbeast.svg" /></li>
+        <li><img src="./img/parceiros/lescone.svg" /></li>
+        <li><img src="./img/parceiros/surfbot.svg" /></li>
+      </ul>
+    </section>
   </body>
 </html>
