--- a/src/index.html
+++ b/src/index.html
@@ -507,5 +507,43 @@
         <li><img src="./img/parceiros/surfbot.svg" /></li>
       </ul>
     </section>
+
+    <!-- Footer -->
+    <footer class="container pb-8">
+      <div class="bg-verde-900 p-6 sm:p-12 rounded-2xl mb-8 grid gap-8">
+        <div class="flex gap-12 max-sm:flex-col max-sm:gap-4">
+          <div class="">
+            <h3 class="text-white font-serif text-xl mb-4">Endereço</h3>
+            <p class="text-gray-400">
+              Rua da Mata, 123<br />
+              Floresta Nacional<br />
+              Rio de Janeiro, RJ
+            </p>
+          </div>
+          <div class="">
+            <h3 class="text-white font-serif text-xl mb-4">Contato</h3>
+            <p class="text-gray-400">
+              contato@floresnt.com<br />
+              +55 9 9999-9999<br />
+              Rio de Janeiro, RJ
+            </p>
+          </div>
+          <div class="lg:justify-self-end">
+            <img class="mb-4" src="./img/forest.svg" />
+            <p class="text-gray-400">Conecte-se com a natureza</p>
+          </div>
+        </div>
+      </div>
+      <div
+        class="text-gray-400 flex items-center justify-between gap-8 text-sm max-sm:flex-col-reverse"
+      >
+        <p>Todos os direitos reservados</p>
+        <ul class="flex gap-8">
+          <li><a class="hover:text-verde-300" href="#">Inatagram</a></li>
+          <li><a class="hover:text-verde-300" href="#">Linkedin</a></li>
+          <li><a class="hover:text-verde-300" href="#">Facebook</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
